--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ(2.59)
-AC_INIT(ganeti-instance-debootstrap, 0.14, ganeti@googlegroups.com)
+AC_INIT(ganeti-instance-poldek, 0.1, baggins@pld-linux.org)
 
 AC_CONFIG_AUX_DIR(autotools)
 AC_CONFIG_SRCDIR(configure)
