Added th and th-i686 variants

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 osname=$(subst ganeti-instance-,,$(PACKAGE))
 
 osdir=$(OS_DIR)/$(osname)
-variantsdir=$(DESTDIR)$(sysconfdir)/ganeti/instance-poldek/variants
-defaultsdir=$(DESTDIR)$(sysconfdir)/default
+variantsdir=$(sysconfdir)/ganeti/instance-poldek/variants
+defaultsdir=$(sysconfdir)/default
 
 dist_os_SCRIPTS = create import export rename verify
 dist_os_DATA = ganeti_api_version variants.list parameters.list \
@@ -26,7 +26,13 @@ dist_example_DATA = \
 	examples/hooks/ssh-keys \
 	examples/hooks/timezone
 
+dist_variants_DATA = \
+	variants/th.conf \
+	variants/th-i686.conf
+
 EXTRA_DIST = \
+	variants/th.conf.in \
+	variants/th-i686.conf.in \
 	common.sh.in \
 	defaults
 
@@ -38,15 +44,23 @@ common.sh: common.sh.in Makefile
 	$(do_subst) < $< > $@
 	chmod +x $@
 
+variants/th.conf: variants/th.conf.in
+	$(do_subst) < $< > $@
+
+variants/th-i686.conf: variants/th-i686.conf.in
+	$(do_subst) < $< > $@
+
 install-exec-local:
-	@mkdir_p@ $(variantsdir)
-	touch $(variantsdir)/default.conf
-	@mkdir_p@ $(defaultsdir)
+	@mkdir_p@ $(DESTDIR)$(variantsdir)
+	touch $(DESTDIR)$(variantsdir)/default.conf
+	@mkdir_p@ $(DESTDIR)$(defaultsdir)
 	$(INSTALL_DATA) $(top_srcdir)/defaults \
-	  $(defaultsdir)/ganeti-instance-poldek
+		$(DESTDIR)$(defaultsdir)/ganeti-instance-poldek
 
 uninstall-local:
-	rm -f $(variantsdir)/default.conf
-	rm -f $(defaultsdir)/ganeti-instance-poldek
+	rm -f $(DESTDIR)$(variantsdir)/default.conf
+	rm -f $(DESTDIR)$(variantsdir)/th.conf
+	rm -f $(DESTDIR)$(variantsdir)/th-i686.conf
+	rm -f $(DESTDIR)$(defaultsdir)/ganeti-instance-poldek
 
 CLEANFILES = common.sh
