--- a/common.sh.in
+++ b/common.sh.in
@@ -142,7 +142,7 @@ fi
 # will use it, this declaration is to make sure the variable is set
 : ${MIRROR:=""}
 : ${PROXY:=""}
-: ${SUITE:="Th"}
+: ${SUITE:="th"}
 : ${ARCH:=""}
 : ${EXTRA_PKGS:=""}
 : ${COMPONENTS:=""}
