--- a/common.sh.in
+++ b/common.sh.in
@@ -215,3 +215,14 @@ if [ -n "$OS_VARIANT" ]; then
     exit 1
   fi
 fi
+
+if [ $HYPERVISOR = "xen-pvm" ]; then
+  # Extract kernel version from vmlinuz image
+  # that will be used to start the PVM guest
+  _where=$(od -j 526 -N 2 -A n -d $INSTANCE_HV_kernel_path)
+  _where=$(($_where + 512))
+  kernel_ver=$(dd if=$INSTANCE_HV_kernel_path bs=1 skip=$_where count=128 2>/dev/null | cut -f 1 -d ' ')
+elif [ $HYPERVISOR = "xen-hvm" ]; then
+  # make sure we have kernel and bootloader in HVM guest
+  EXTRA_PKGS="$EXTRA_PKGS kernel grub2 grub2-platform-pc"
+fi
