--- a/common.sh.in
+++ b/common.sh.in
@@ -1,6 +1,7 @@
 #
 
 # Copyright (C) 2007, 2008, 2009, 2012 Google Inc.
+# Copyright (c) 2014 Jan Rękorajski <baggins@pld-linux.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
