Add dracut to KVM/Xen-HVM guests

--- a/common.sh.in
+++ b/common.sh.in
@@ -227,7 +227,7 @@ if [ $HYPERVISOR = "xen-pvm" ]; then
 	_where=$(od -j 526 -N 2 -A n -d $INSTANCE_HV_kernel_path)
 	_where=$(($_where + 512))
 	kernel_ver=$(dd if=$INSTANCE_HV_kernel_path bs=1 skip=$_where count=128 2>/dev/null | cut -f 1 -d ' ')
-elif [ $HYPERVISOR = "xen-hvm" ]; then
-	# make sure we have kernel and bootloader in HVM guest
-	EXTRA_PKGS="$EXTRA_PKGS kernel grub2 grub2-platform-pc"
+elif [ $HYPERVISOR = "xen-hvm" -o $HYPERVISOR = "kvm" ]; then
+	# make sure we have kernel and bootloader in KVM and Xen HVM guests
+	EXTRA_PKGS="$EXTRA_PKGS kernel dracut grub2 grub2-platform-pc"
 fi
